--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@eslint/js": "^9.17.0",
     "@typescript-eslint/eslint-plugin": "^8.18.2",
     "@typescript-eslint/parser": "^8.18.2",
+    "copy-webpack-plugin": "^12.0.2",
     "eslint": "^9.17.0",
     "globals": "^15.14.0",
     "ts-loader": "^9.5.1",
