--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "typescript": "^5.7.2",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1"
+  },
+  "dependencies": {
+    "exceljs": "^4.4.0"
   }
 }
